# Xastir-Qt

./: .gitignore  .travis.yml  README.md  build.sh  main.cpp  mainwindow.cpp  mainwindow.h  netinterface.cpp  xastir-qt.pro
callpass/: Makefile.am  bootstrap.sh  build.sh  configure.ac
